# openai_sdk_rust

./: Cargo.toml  README.md
examples/: chat.rs
openai_http/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
openai_http/examples/: chat.rs  completion.rs
openai_http/src/: api.rs  client.rs  error.rs
openai_http/src/api/: create_chat_completion.rs
openai_http_client/: Cargo.toml  README.md
openai_http_client/examples/: chat.rs  completion.rs  edit.rs
openai_http_client/src/: api.rs  client.rs  lib.rs  types.rs
openai_http_client/src/api/: create_chat_completion.rs  create_completion.rs  create_edit.rs
src/: api.rs  client.rs  types.rs
