[package]
name = "openai_http"
description = "A strongly-typed client for the OpenAI HTTP API"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gmosx/openai_sdk_rust/tree/main/openai_http"
keywords = ["openai", "client", "api"]
authors = ["George Moschovitis <gmosx@reizu.com>"]
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
